Questions are now a link. Fixed a few to do with overlapping.

--- a/polls/static/polls/css/layout.css
+++ b/polls/static/polls/css/layout.css
@@ -2,6 +2,16 @@
     float: right;
 }
 
+.l-inline-left {
+    display: inline;
+    float: left;
+}
+
+.l-inline-right {
+    display: inline;
+    float: right;
+}
+
 .wrapper {
     margin-left: auto;
     margin-right: auto;
@@ -12,5 +22,7 @@
 }
 
 .container {
-
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3px;
 }
