--- a/polls/static/polls/css/module.css
+++ b/polls/static/polls/css/module.css
@@ -1,30 +1,19 @@
 .question {
     background-color: #2f4f52;
-    border-bottom: 1px solid black;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: auto;
-    margin: 3px;
-    padding: 0.5em 0.5em 0em 0.5em;
+    border: 1px solid black;
+    display: inline-block;
+    margin-bottom: 3px;
+    padding: 5px;
+    text-decoration: none;
+    width: 100%;
 }
 
 .question-title {
-    grid-column: 1 / 3;
-    grid-row: 1;
-}
-.question-title > a {
     font-size: 115%;
     font-weight: bold;
-    text-decoration: none;
 }
-
-.question-date {
-    grid-column: 2;
-    grid-row: 2;
-    text-align: right;
-}
-
-.question-other {
-    grid-column: 1;
-    grid-row: 2;
+.question > p {
+    font-size: small;
+    margin-top: 1px;
+    margin-bottom: 1px;
 }
